--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://jej512.github.io/react-movie-list/"
+  "homepage": "https://jej512.github.io/react-movie-list/"
 }
